--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ span{
    background-clip: text;
    animation: animate-gradient 2s linear infinite;
    cursor:pointer;
-   animation:fade 5s ease;
+   animation:fade 2s ease;
 
 }
 @keyframes animate-gradient{
@@ -86,31 +86,7 @@ header{
     animation:fade 2s ease;
      
 }
-.searchnm{
-    margin-top: 2vh;
-    padding:20px 40px;
-    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(250, 187, 0) 0%, rgb(249, 91, 0) 90% );
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-size:20px;
-    width:60vw;
-    border:none;
-    cursor:pointer;
-    border-radius: 12px;
-    color:rgb(255, 255, 255);
-    font-weight:500;
-    text-align: center;
-    transition: width 0.7s;
-    animation:fade 2s ease;
 
-}
-.searchnm:hover{
-    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(249, 196, 40) 0%, rgb(250, 113, 34) 90% );
-    border:none;
-    transition:all 0.7s;
-    width:75vw;
-    box-shadow:0px 0px 2px 2px gold;
-}
 
 .log1{
     margin-top: 2vh;
@@ -127,11 +103,89 @@ header{
     font-weight:500;
     text-align: center;
     transition: width 0.7s;
-    animation: divine 5s 3s ease infinite,fade 2s ease;
+    animation: bright 2s 2s ease,fade 2s ease;
     
 
 }
 .log1:hover{
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(249, 196, 40) 0%, rgb(250, 113, 34) 90% );
+    border:none;
+    transition:all 0.7s;
+    width:75vw;
+    box-shadow:0px 0px 2px 2px gold;
+}
+.log2{
+    margin-top: 2vh;
+    padding:20px 40px;
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(250, 187, 0) 0%, rgb(249, 91, 0) 90% );
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-size:20px;
+    width:60vw;
+    border:none;
+    cursor:pointer;
+    border-radius: 12px;
+    color:rgb(255, 255, 255);
+    font-weight:500;
+    text-align: center;
+    transition: width 0.7s;
+    animation:  bright 2s 4s ,fade 2s ease;
+    
+
+}
+.log2:hover{
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(249, 196, 40) 0%, rgb(250, 113, 34) 90% );
+    border:none;
+    transition:all 0.7s;
+    width:75vw;
+    box-shadow:0px 0px 2px 2px gold;
+}
+.log3{
+    margin-top: 2vh;
+    padding:20px 40px;
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(250, 187, 0) 0%, rgb(249, 91, 0) 90% );
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-size:20px;
+    width:60vw;
+    border:none;
+    cursor:pointer;
+    border-radius: 12px;
+    color:rgb(255, 255, 255);
+    font-weight:500;
+    text-align: center;
+    transition: width 0.7s;
+    animation:  bright 2s 6s ease ,fade 2s ease;
+    
+
+}
+.log3:hover{
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(249, 196, 40) 0%, rgb(250, 113, 34) 90% );
+    border:none;
+    transition:all 0.7s;
+    width:75vw;
+    box-shadow:0px 0px 2px 2px gold;
+}
+.log4{
+    margin-top: 2vh;
+    padding:20px 40px;
+    background: radial-gradient( circle farthest-corner at 10% 20%, rgb(250, 187, 0) 0%, rgb(249, 91, 0) 90% );
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-size:20px;
+    width:60vw;
+    border:none;
+    cursor:pointer;
+    border-radius: 12px;
+    color:rgb(255, 255, 255);
+    font-weight:500;
+    text-align: center;
+    transition: width 0.7s;
+    animation: bright 2s 8s ease,fade 2s ease;
+    
+
+}
+.log4:hover{
     background: radial-gradient( circle farthest-corner at 10% 20%, rgb(249, 196, 40) 0%, rgb(250, 113, 34) 90% );
     border:none;
     transition:all 0.7s;
@@ -155,8 +209,8 @@ header{
     text-align: center;
     transition: width 0.7s;
     text-decoration: none;
-    animation:fade 2s ease,divinenine 5s 5s ease infinite;
-   
+    animation:fade 2s ease, bright 6s 10s ease infinite;
+    filter:blur(100%);
 
    
 
@@ -248,10 +302,10 @@ margin-left:20vw;
     cursor:pointer;
     animation:fade 2s ease;
 }
-@keyframes getbig{
-    0%{scale:0}
-    100%{scale:1}
-}
+@keyframes bright{
+    0%{filter:brightness(100%)}
+    100%{filter:brightness(150%)}}
+
 @keyframes animate-gradient{
 to {
     background-position: 200%;
