--- a/style.css
+++ b/style.css
@@ -209,11 +209,7 @@ header{
     text-align: center;
     transition: width 0.7s;
     text-decoration: none;
-    animation:fade 2s ease, bright 6s 10s ease infinite;
-    filter:blur(100%);
-
-   
-
+    animation:fade 2s ease, bright 6s 10s ease;
 }
 .button1:hover{
     border:none;
@@ -221,13 +217,7 @@ header{
     background:linear-gradient(90deg,rgb(255, 192, 3) , rgb(255, 72, 0));
     width:50vw;
 }
-.button1:active{
-    background-color:white;
-}
-.button1:visited{
-    background-color: silver;
-}
-    
+
 
 .lgin{
     font-family: "Montserrat", sans-serif;
